This is a sample section.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <br>
     <a href="about.html">About Us</a>
     <hr>
+    <section style="background-color: aqua;">
+        <p>This is a sample section</p> </section>
 
 </body>
 
