Section has been added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <hr>
     <section style="background-color: aqua;">
         <p>This is a sample section</p> </section>
+        <div>
+        <h1> Sample DIV</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis repudiandae sunt voluptate consequatur, praesentium necessitatibus aut quas iusto ipsum! Doloribus harum fugiat sequi deserunt sed fugit quaerat, repellat commodi.</p></div>
 
 </body>
 
