Change of a ssection color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
     <a href="about.html">About Us</a>
     <hr>
-    <section style="background-color: aqua;">
+    <section style="background-color: rgb(170, 0, 255);">
         <p>This is a sample section</p> </section>
         <div>
         <h1> Sample DIV</h1>
