--- a/about.html
+++ b/about.html
@@ -1,14 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <h1>About us page</h1>
     <p>This is my second page</p>
     <a href="index.html">Home</a>
-    
-</body>
+
+    <table border="1">
+      <h2>Students information</h2>
+
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Email</th>
+      </tr>
+
+      <tr>
+        <td>John Wick</td>
+        <td>45</td>
+        <td>babayaga@gmail.com</td>
+      </tr>
+
+      <tr>
+        <td>Jane Doe</td>
+        <td>24</td>
+        <td>janedoe@gmail.com</td>
+      </tr>
+
+      <tr>
+        <td>John Doe</td>
+        <td>36</td>
+        <td>jdoe@gmail.com</td>
+      </tr>
+    </table>
+
+    <!-- Creating a simple table -->
+    <h2>Timetable</h2>
+    <table border="1">
+      <th>Time</th>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+
+      <tr>
+        <td>8:00-9:00am</td>
+        <td rowspan="2">Chemistry</td>
+        <td>Maths</td>
+        <td>Physics</td>
+        <td>Geography</td>
+        <td rowspan="2">English</td>
+      </tr>
+
+      <tr>
+        <td>9:00-10:00am</td>
+        <!-- <td>Chemistry</td> -->
+        <td>Physics</td>
+        <td rowspan="2">Geography</td>
+        <td>Maths</td>
+        <!-- <td>English</td> -->
+      </tr>
+
+      <tr>
+        <td>10:00-11:00am</td>
+        <td>Biology</td>
+        <td>French</td>
+        <!-- <td>Geogrpahy</td> -->
+        <td>English</td>
+        <td>Maths</td>
+      </tr>
+    </table>
+    <table border="1">
+      <h2>Monthly Expenditure</h2>
+      <tr>
+        <th>Expense</th>
+        <th>January</th>
+        <th>February</th>
+        <th>March</th>
+      </tr>
+      <tr>
+        <td>Rent</td>
+        <td colspan="3" style="text-align: center">Ksh 20,000</td>
+        <!-- <td>Ksh 20,000</td> -->
+        <!-- <td>Ksh 20,000</td> -->
+      </tr>
+      <tr>
+        <td>Groceries</td>
+        <td>Ksh 2,000</td>
+        <td>Ksh 3,000</td>
+        <td>Ksh 4,000</td>
+      </tr>
+      <tr>
+        <td>Shopping</td>
+        <td>Ksh 6,000</td>
+        <td colspan="2" style="text-align: center">Ksh 8,000</td>
+        <!-- <td>Ksh 8,000</td> -->
+      </tr>
+    </table>
+    <table border="1">
+      <h2>Meal Plan</h2>
+      <thead>
+        <tr>
+          <th>Day</th>
+          <th>Breakfast</th>
+          <th>Lunch</th>
+          <th>Dinner</th>
+        </tr>
+      </thead>
+      <tbody style="background-color: aqua">
+        <tr>
+          <td>Monday</td>
+          <td>Porridge</td>
+          <td>Rice</td>
+          <td>Fish</td>
+        </tr>
+        <tr>
+          <td>Tuesday</td>
+          <td>Oatmeal</td>
+          <td>Chapati</td>
+          <td>Chicken</td>
+        </tr>
+      </tbody>
+      <tfoot style="background-color: brown">
+        <tr>
+          <!-- <td></td> -->
+          <td colspan="4" style="text-align: center">Meal plan for the week</td>
+          <!-- <td></td> -->
+          <!-- <td></td> -->
+        </tr>
+      </tfoot>
+    </table>
+  </body>
 </html>
