--- a/index.html
+++ b/index.html
@@ -1,31 +1,69 @@
 <html>
-
-<head>
+  <head>
     <title>First Site</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h2>First <i>Webpage</i></h2>
-    <p>Lorem <strong>ipsum</strong>, dolor sit amet consectetur adipisicing elit. Laborum culpa odit exercitationem
-        ipsa, quam voluptatum neque pariatur explicabo. Eius iure molestias corporis itaque rerum, minima fuga
-        laudantium commodi est! Cum.</p>
+    <p>
+      Lorem <strong>ipsum</strong>, dolor sit amet consectetur adipisicing elit.
+      Laborum culpa odit exercitationem ipsa, quam voluptatum neque pariatur
+      explicabo. Eius iure molestias corporis itaque rerum, minima fuga
+      laudantium commodi est! Cum.
+    </p>
     <p><i>This</i> is my <b>first</b> paragraph.</p>
     <p>log<sub>2</sub>8 = 3</p>
     <p>28<sup>th</sup> July 2024</p>
     <a href="https://zinduaschool.com/">Zindua School</a>
-    <br>
+    <br />
     <a href="https://www.bbc.com/news">BBC News</a>
-    <br>
-    <img src="logo.jpg" alt="Zindua logo" height="40px" width="80px">
-    <br>
+    <br />
+    <img src="logo.jpg" alt="Zindua logo" height="40px" width="80px" />
+    <br />
     <a href="about.html">About Us</a>
-    <hr>
-    <section style="background-color: rgb(170, 0, 255);">
-        <p>This is a sample section</p> </section>
-        <div>
-        <h1> Sample DIV</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis repudiandae sunt voluptate consequatur, praesentium necessitatibus aut quas iusto ipsum! Doloribus harum fugiat sequi deserunt sed fugit quaerat, repellat commodi.</p></div>
+    <hr />
+    <section style="background-color: rgb(170, 0, 255)">
+      <p>This is a sample section</p>
+    </section>
+    <div>
+      <h1>Sample DIV</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+        omnis repudiandae sunt voluptate consequatur, praesentium necessitatibus
+        aut quas iusto ipsum! Doloribus harum fugiat sequi deserunt sed fugit
+        quaerat, repellat commodi.
+      </p>
+    </div>
 
-</body>
+    <h2>List of fruits</h2>
+    <ol type="a">
+      <li>Mangoes</li>
+      <li>Pawpaws</li>
+      <li>Oranges</li>
+      <li>Apples</li>
+    </ol>
 
+    <h2>List of students</h2>
+    <ol type="I">
+      <li>Mary</li>
+      <li>John</li>
+      <li>Tyler</li>
+    </ol>
+
+    <h1>Unorderd List</h1>
+    <h2>List of music genres</h2>
+    <ul>
+        <li>Rhumba</li>
+        <li>Reggae</li>
+        <li>Rap</li>
+        
+    </ul>
+
+    <h1>Definition lists</h1>
+    <dl>
+        <dt>CSS</dt>
+        <dd>CSS stands for Cascading Style Sheets</dd>
+    </dl>
+    
+  </body>
 </html>
