List and table exercises

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <img src="logo.jpg" alt="Zindua logo" height="40px" width="80px" />
     <br />
     <a href="about.html">About Us</a>
+    <br>
+    <a href="lists_exercise.html">List exercises</a>
+    <br>
+    <a href="Table_exercise.html">Table Exercises</a>
     <hr />
     <section style="background-color: rgb(170, 0, 255)">
       <p>This is a sample section</p>
