Changes made to table contents

--- a/Table_exercise.html
+++ b/Table_exercise.html
@@ -11,6 +11,7 @@
     <table border="1">
       <h3>Data about books</h3>
       <tr>
+        <th>Title</th>
         <th>Genre</th>
         <th>Author</th>
         <th>Reading level</th>
